--- a/search.html
+++ b/search.html
@@ -10,7 +10,7 @@
       <link rel="profile" href="http://gmpg.org/xfn/11" />
       <title>Autograph Letter Signed W. H. Auden to Stella Musulin</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-      <link rel="stylesheet" href="staticSearch/ssSearch.css" id="ssCss"/>
+      <link rel="stylesheet" href="static-search/ssSearch.css" id="ssCss"/>
       <link rel="stylesheet" id="fundament-styles" href="dist/fundament/css/fundament.min.css" type="text/css" />
       <link rel="stylesheet" href="css/style.css" type="text/css" />
    </head>
