adding cards to search.html, minor searchbar style changes #4

--- a/search.html
+++ b/search.html
@@ -29,8 +29,13 @@
             </nav>
          </div>
          <div class="container-fluid">
-            <div id="staticSearch">
-            </div>
+            <div class="card">
+               <div class="card-header">
+                  <h1>Document Search</h1>
+               </div>
+               <div class="card-body" id="staticSearch">
+               </div>
+            </div>            
          </div>
          <div class="wrapper fundament-default-footer" id="wrapper-footer-full">
             <div class="container" id="footer-full-content" tabindex="-1">
