initial version for row based erison of transcript and facsimile #5

--- a/search.html
+++ b/search.html
@@ -29,7 +29,7 @@
             </nav>
          </div>
          <div class="container-fluid">
-            <div class="card">
+            <div class="card" style="margin-top: 1em; margin-bottom: 5em;">
                <div class="card-header">
                   <h1>Document Search</h1>
                </div>
