--- a/search.html
+++ b/search.html
@@ -31,45 +31,45 @@
                      <!-- Your menu goes here -->
                      <ul id="main-menu" class="navbar-nav">
                         <li class="nav-item dropdown">
-                           <a title="Dropdown" href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">Papers <span class="caret"></span></a>
+                           <a title="Papers" href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">Papers <span class="caret"></span></a>
                            <ul class=" dropdown-menu" role="menu">
                               <li class="nav-item dropdown-submenu">
-                                 <a title="Level 1" href="toc.html" class="nav-link">Auden-Musulin Correspondence</a>
+                                 <a title="Auden-Musulin Correspondence" href="toc.html" class="nav-link">Auden-Musulin Correspondence</a>
                               </li>
                               <li class="nav-item dropdown-submenu">
-                                 <a title="Level 1" href="#" class="nav-link">Musulin typescripts</a>
+                                 <a title="Musulin typescripts" href="#" class="nav-link">Musulin typescripts</a>
                               </li>
                               <li class="nav-item dropdown-submenu">
-                                 <a title="Level 1" href="#" class="nav-link">Photos</a>
+                                 <a title="Photos" href="#" class="nav-link">Photos</a>
                               </li>
                               <li class="nav-item dropdown-submenu">
-                                 <a title="Level 1" href="#" class="nav-link">CVL visualizations</a>
+                                 <a title="CVL visualizations" href="#" class="nav-link">CVL visualizations</a>
                               </li>
                            </ul>                                
                         </li>
                         <li class="nav-item dropdown">
-                           <a title="Dropdown" href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">Indexes <span class="caret"></span></a>
+                           <a title="Indexes" href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">Indexes <span class="caret"></span></a>
                            <ul class=" dropdown-menu" role="menu">
                               <li class="nav-item dropdown-submenu">
-                                 <a title="Level 1" href="#" class="nav-link">Persons</a>
+                                 <a title="Persons" href="#" class="nav-link">Persons</a>
                               </li>
                               <li class="nav-item dropdown-submenu">
-                                 <a title="Level 1" href="#" class="nav-link">Institutions</a>
+                                 <a title="Institutions" href="#" class="nav-link">Institutions</a>
                               </li>
                               <li class="nav-item dropdown-submenu">
-                                 <a title="Level 1" href="#" class="nav-link">Works</a>
+                                 <a title="Works" href="#" class="nav-link">Works</a>
                               </li>
                               <li class="nav-item dropdown-submenu">
-                                 <a title="Level 1" href="#" class="nav-link">Places</a>
+                                 <a title="Places" href="#" class="nav-link">Places</a>
                               </li>
                               <li class="nav-item dropdown-submenu">
-                                 <a title="Level 1" href="#" class="nav-link">Events</a>
+                                 <a title="Events" href="#" class="nav-link">Events</a>
                               </li>
                            </ul>                                
                         </li>                            
                         <li class="nav-item"><a title="Relations" href="#" class="nav-link">Relations</a></li>
                         <!--<li class="nav-item dropdown">
-                                <a title="Dropdown" href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">Biographies <span class="caret"></span></a>
+                                <a title="Biographies" href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">Biographies <span class="caret"></span></a>
                                 <ul class=" dropdown-menu" role="menu">
                                     <li class="nav-item dropdown-submenu">
                                         <a title="Level 1" href="#" class="nav-link">In Progress</a>
@@ -80,19 +80,22 @@
                                 </ul>                                
                             </li>-->
                         <li class="nav-item dropdown">
-                           <a title="Dropdown" href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">Project <span class="caret"></span></a>
+                           <a title="Project" href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">Project <span class="caret"></span></a>
                            <ul class=" dropdown-menu" role="menu">
                               <li class="nav-item dropdown-submenu">
-                                 <a title="Level 1" href="#" class="nav-link">Description</a>
+                                 <a title="Description" href="#" class="nav-link">Description</a>
                               </li>
                               <li class="nav-item dropdown-submenu">
-                                 <a title="Level 1" href="#" class="nav-link">Team</a>
+                                 <a title="Team" href="#" class="nav-link">Team</a>
                               </li>
                               <li class="nav-item dropdown-submenu">
-                                 <a title="Level 1" href="#" class="nav-link">Editorial Declaration</a>
+                                 <a title="Editorial Declaration" href="#" class="nav-link">Editorial Declaration</a>
                               </li>
+                              <!--<li class="nav-item dropdown-submenu">
+                                        <a title="Instruction for using the edition" href="#" class="nav-link">Instruction for using the edition</a>
+                                    </li>-->
                               <li class="nav-item dropdown-submenu">
-                                 <a title="Level 1" href="#" class="nav-link">Technical Documentation</a>
+                                 <a title="Technical Documentation" href="#" class="nav-link">Technical Documentation</a>
                               </li>
                            </ul>                                
                         </li>                            
@@ -147,18 +150,18 @@
                      <div class="container">
                         <div class="row">
                            <div class="col-lg-6 col-md-6 col-sm-12">
-                              <div class="card flex-md-row mb-4 align-items-center"><a href="https://www.fwf.ac.at/en/"><img class="card-img-right flex-auto d-md-block" src="https://www.fwf.ac.at/fileadmin/files/Images/News_Presse/Presse/Logo/fwf-logo_var2.jpg" alt="FWF Der Wissenschaftsfond Logo" style="max-width: 140px; height: auto; margin-top:1em;" title="FWF Der Wissenschaftsfond" /></a></div>
+                              <div class="flex-md-row mb-4 align-items-center"><a href="https://www.fwf.ac.at/en/"><img class="card-img-right flex-auto d-md-block" src="https://www.fwf.ac.at/fileadmin/files/Images/News_Presse/Presse/Logo/fwf-logo_var2.jpg" alt="FWF Der Wissenschaftsfond Logo" style="max-width: 140px; height: auto; margin-top:1em;" title="FWF Der Wissenschaftsfond" /></a></div>
                            </div>
                            <div class="col-lg-6 col-md-6 col-sm-12">
-                              <div class="card flex-md-row mb-4 align-items-center"><a href="https://www.univie.ac.at/en/"><img class="card-img-right flex-auto d-md-block" src="https://communications.univie.ac.at/fileadmin/user_upload/d_oeffentlichkeitsarbeit/Logos/2016-02/Uni_Logo_2016.jpg" alt="Universität Wien Logo" style="max-width: 160px; height: auto; vertical-align: middle;" title="Universität Wien" /></a></div>
+                              <div class="flex-md-row mb-4 align-items-center"><a href="https://www.univie.ac.at/en/"><img class="card-img-right flex-auto d-md-block" src="https://communications.univie.ac.at/fileadmin/user_upload/d_oeffentlichkeitsarbeit/Logos/2016-02/Uni_Logo_2016.jpg" alt="Universität Wien Logo" style="max-width: 160px; height: auto; vertical-align: middle;" title="Universität Wien" /></a></div>
                            </div>
                         </div>
                         <div class="row">
                            <div class="col-lg-6 col-md-6 col-sm-12">
-                              <div class="card flex-md-row mb-4 align-items-center"><a href="https://www.donau-uni.ac.at/en.html"><img class="card-img-right flex-auto d-md-block" src="https://upload.wikimedia.org/wikipedia/de/2/2f/Donau_Universit%C3%A4t_Krems.svg" alt="Donau Universität Krems Logo" style="max-width: 120px; height: auto; vertical-align: middle;" title="Donau Universität Krems " /></a></div>
+                              <div class="flex-md-row mb-4 align-items-center"><a href="https://www.donau-uni.ac.at/en.html"><img class="card-img-right flex-auto d-md-block" src="https://upload.wikimedia.org/wikipedia/de/2/2f/Donau_Universit%C3%A4t_Krems.svg" alt="Donau Universität Krems Logo" style="max-width: 120px; height: auto; vertical-align: middle;" title="Donau Universität Krems " /></a></div>
                            </div>
                            <div class="col-lg-6 col-md-6 col-sm-12">
-                              <div class="card flex-md-row mb-4 align-items-center"><a href="https://cvl.tuwien.ac.at/"><img class="card-img-right flex-auto d-md-block" src="https://www.oeaw.ac.at/fileadmin/Institute/ACDH/img/logo/cvl_logo.png" alt="Computer Vision Lab Logo" style="max-width: 140px; height: auto; padding: .5em;" title="Computer Vision Lab" /></a></div>
+                              <div class="flex-md-row mb-4 align-items-center"><a href="https://cvl.tuwien.ac.at/"><img class="card-img-right flex-auto d-md-block" src="https://www.oeaw.ac.at/fileadmin/Institute/ACDH/img/logo/cvl_logo.png" alt="Computer Vision Lab Logo" style="max-width: 140px; height: auto; padding: .5em;" title="Computer Vision Lab" /></a></div>
                            </div>
                         </div>
                      </div>
