minor corporate design style changes #8

--- a/search.html
+++ b/search.html
@@ -22,7 +22,7 @@
                <div class="container" >
                   <!-- Your site title as branding in the menu -->
                   <a href="index.html" class="navbar-brand custom-logo-link" rel="home" itemprop="url"><img src="images/Auden_Musulin_Papers_Logo_rechteckig_web.png" class="img-fluid" alt="Auden Musulin Papers Logo" itemprop="logo" /></a><!-- end custom logo -->
-                  <a class="navbar-brand site-title-with-logo" rel="home" href="index.html" title="Auden Musulin Papers" itemprop="url">Auden Musulin Papers</a>
+                  <a class="navbar-brand site-title-with-logo" rel="home" href="index.html" title="Auden Musulin Papers" itemprop="url"><!--Auden Musulin Papers--></a>
                   <span style="margin-left:-1.7em;" class="badge bg-light text-dark">in development</span>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                      <span class="navbar-toggler-icon"></span>
